
  * Enable easy switching between stable and unstable translations
  * Make module desktop fetching more robust by trying to step into every
    element within the messages directory and if successful try to svn export
    a related desktop file
  * Make kdepim l10n fetching its own target
  * Update build script for new branch name
  * Update build script to use ftpmaster rather than ktown

 -- Harald Sitter <apachelogger@ubuntu.com>  Thu, 07 Jul 2011 12:36:08 +0200

kde-l10n-aaaUBUNTULANGCODEbbb (4:4.6.2-0ubuntu1) natty; urgency=low

  [ Jonathan Riddell ]
  * New upstream release

  [ Felix Geyer ]
  * Don't use quilt, obsolete with source format 3.0.
  * Compress the debian packaging tarball with bzip2.

 -- Jonathan Riddell <jriddell@ubuntu.com>  Wed, 06 Apr 2011 14:12:09 +0100

kde-l10n-aaaUBUNTULANGCODEbbb (4:4.6.1-0ubuntu1) natty; urgency=low

  * New upstream release

 -- Felix Geyer <debfx-pkg@fobos.de>  Fri, 04 Mar 2011 20:37:16 +0100

kde-l10n-aaaUBUNTULANGCODEbbb (4:4.6.0-0ubuntu1) natty; urgency=low

  * New upstream release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 24 Jan 2011 09:32:25 +0000

kde-l10n-aaaUBUNTULANGCODEbbb (4:4.5.95-0ubuntu1) natty; urgency=low

  * New upstream RC release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 06 Jan 2011 14:22:29 +0000

kde-l10n-aaaUBUNTULANGCODEbbb (4:4.5.90-0ubuntu1) natty; urgency=low

  * New upstream RC release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Thu, 23 Dec 2010 00:03:53 +0000

kde-l10n-aaaUBUNTULANGCODEbbb (4:4.5.85-0ubuntu1) natty; urgency=low

  * New upstream beta release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 06 Dec 2010 23:06:59 +0000

kde-l10n-aaaUBUNTULANGCODEbbb (4:4.5.80-0ubuntu1) natty; urgency=low

  * New upstream beta release

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 29 Nov 2010 17:52:23 +0000

kde-l10n-aaaUBUNTULANGCODEbbb (4:4.5.3-0ubuntu1) natty; urgency=low

  * New upstream release
